--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Team colour Philips Hue lights for the Overwatch League",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,8 +18,11 @@
   },
   "homepage": "https://github.com/PkerUNO/RainbowOWL#readme",
   "dependencies": {
+    "@q42philips/hue-color-converter": "^1.0.0",
+    "color-parse": "^1.3.5",
     "express": "^4.16.2",
-    "huejay": "^1.7.4"
+    "huejay": "^1.7.4",
+    "nconf": "^0.10.0"
   },
   "devDependencies": {
     "eslint": "^4.16.0"
